--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
   display: none;
 }
 
+/* body {
+  background-color: #e5e5e5;
+} */
+
 header {
   color: white;
   background-color: #0081b9;
@@ -31,21 +35,36 @@ button {
   justify-content: center;
 }
 
-.cat-holder,
-.quiz {
-  width: 300px;
-  margin: 0 auto;
-  padding-bottom: 15px;
-}
-
-input {
-  display: flex;
-  width: 100%;
-  padding: 5px;
-  border-radius: 5px;
-  justify-content: center;
+h2 {
+  /* color: #e5e5e5; */
+  color: white;
 }
 
 img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.cat-img,
+.choices {
+  width: 300px;
+  margin: 0 auto;
+}
+
+.choices {
+  padding: 5px 0;
+  background-color: #0081b9;
+  border-radius: 5px;
+}
+
+input {
+  display: flex;
+  width: 95%;
+  padding: 5px;
+  border-radius: 5px;
+  justify-content: center;
+  margin: 5px auto;
+  background-color: white;
+  cursor: pointer;
 }
