--- a/css/layout.css
+++ b/css/layout.css
@@ -12,11 +12,15 @@ header {
   justify-content: center;
 }
 
+.start-view {
+  height: 100vh;
+}
+
 .column-halves {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 100px;
 }
 
 .start {
