Completed issue 2, user can start the quiz and see image and multiple choices which gives back feedback if the choice is right or wrong

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,7 @@ button {
 }
 
 h2 {
-  /* color: #e5e5e5; */
-  color: white;
+  color: black;
 }
 
 img {
@@ -67,4 +66,12 @@ input {
   margin: 5px auto;
   background-color: white;
   cursor: pointer;
+}
+
+.correct {
+  background-color: rgb(57, 255, 57);
+}
+
+.incorrect {
+  background-color: red;
 }
