--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ h2 {
 img {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .cat-img,
@@ -59,7 +59,7 @@ img {
 
 input {
   display: flex;
-  width: 95%;
+  width: 90%;
   padding: 5px;
   border-radius: 5px;
   justify-content: center;
