--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,11 @@ button {
   background-color: #e12727;
 }
 
+.restart {
+  display: flex;
+  margin: 10px auto;
+}
+
 .banner {
   display: flex;
   justify-content: center;
@@ -41,7 +46,7 @@ h2 {
 
 img {
   width: 100%;
-  height: 300px;
+  height: 250px;
   object-fit: contain;
 }
 
@@ -66,6 +71,10 @@ input {
   margin: 5px auto;
   background-color: white;
   cursor: pointer;
+}
+
+.prevent-select {
+  user-select: none;
 }
 
 .correct.active {
